# parking-reservation-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/config/: configuration.py  logging_config.py
src/core/: state.py
src/core/graph/: graph.py
src/core/nodes/: dynamic_node.py  out_of_scope_node.py  reservation_node.py  retrieval_node.py  router_node.py
src/data/sql_store/: postgres_client.py
src/data/vector_store/: weaviate_client.py
src/evaluation/: performance_eval.py  retrieval_eval.py
src/evaluation/test_datasets/: retrieval_golden.json
src/guardrails/: input_filter.py  output_filter.py  pii_detector.py
src/seed_data/: postgres_seed.sql  seed_data.py  seed_data_weaviate.py  seed_postgresql.py  sql_schema_script.sql  weaviate_facility_info.json  weaviate_parking_details.json
tests/integration/: test_retrieval_eval_integration.py
tests/unit/: test_retrieval_eval.py
